--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -129,7 +129,7 @@
                                         translate="commons.buttons.validate" ng-disabled="findClubForm.$invalid"
                                         tabindex="8"
                                         ng-class="{'btn waves-effect waves-white disabled': findClubForm.$invalid,
-                                              'btn waves-effect waves-white accent-color': !findClubForm.$invalid}">
+                                              'btn waves-effect waves-white secondary-color': !findClubForm.$invalid}">
                                 </button>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                                 <button ng-click="createStructure()" translate="commons.buttons.validate"
                                         ng-disabled="createStructureForm.$invalid" tabindex="8"
                                         ng-class="{'btn waves-effect waves-white disabled': createStructureForm.$invalid, 
-                                              'btn waves-effect waves-white accent-color': !createStructureForm.$invalid}">
+                                              'btn waves-effect waves-white secondary-color': !createStructureForm.$invalid}">
                                 </button>
                             </div>
                         </div>
