--- a/src/app/modules/commons/users/signup/signupEndDone.html
+++ b/src/app/modules/commons/users/signup/signupEndDone.html
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="center col s12">
                     <a href="#/private/" class="btn white-text accent-color"
-                       translate="signupStartDonePage.buttonHome"></a>&nbsp;
+                       translate="signupStartDonePage.buttonHome"></a>
                 </div>
             </div>
         </div>
@@ -38,16 +38,12 @@
 
 <div class="secondary-color">
     <div class="section white-text">
-
         <h5 class="center-align" translate="landing.area-4.content"></h5>
         <div class="row">
-            <!-- 
-            <span class="col m2 hide-on-small-only">&nbsp;</span>
-            <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-            -->
             <span class="col m5 hide-on-small-only">&nbsp;</span>
-            <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank"><img
-                    class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/></a>
+            <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank">
+                <img src="assets/images/googleplay.png" class="responsive-img" style="width: 15rem;"
+                     alt="play store logo"/></a>
             <span class="col m5 hide-on-small-only">&nbsp;</span>
         </div>
     </div>
