--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -120,7 +120,7 @@
                 <button type="submit"
                         translate="commons.buttons.validate" ng-disabled="signupStartPageForm.$invalid" tabindex="8"
                         ng-class="{'btn btn-s waves-effect waves-white disabled': signupStartPageForm.$invalid, 
-                                  'btn btn-s waves-effect waves-white accent-color': !signupStartPageForm.$invalid}">
+                                  'btn btn-s waves-effect waves-white secondary-color': !signupStartPageForm.$invalid}">
                 </button>
             </div>
         </div>
