--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,70 +1,64 @@
 <div class="home container" id="progress">
-    <div class="row"><div class="col s12">&nbsp;</div></div>
-    <div class="row">
-        <div class="col s12">
-            <ul class="collapsible" data-collapsible="accordion" watch>
-                <li>
-                    <div class="collapsible-header light-primary-color">
-                        <div class="row">
-                            <div class="col m2 s12 icon-conceptH">
-                                <i class="fa fa-bar-chart fa-fw fa-4x white-text"></i>
-                            </div>
-                            <div class="col m10 s12 left-align">
-                                <h3 translate="landing.concept.analyze"
-                                    class="hide-on-small-only primary-text-color"></h3>
-                                <h5 translate="landing.concept.analyze"
-                                    class="hide-on-med-and-up primary-text-color"></h5>
-                                <h5 translate="pricing.offers.standard.statsMob.title"></h5>
-                                <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
-                                       class="right accent-text-color"></a></h5>
-                            </div>
-                        </div>
+    <ul class="collapsible popout" data-collapsible="accordion" watch>
+        <li>
+            <div class="collapsible-header light-primary-color">
+                <div class="row">
+                    <div class="col m2 s12 icon-conceptH">
+                        <i class="fa fa-bar-chart fa-fw fa-4x white-text"></i>
                     </div>
-                    <div class="collapsible-body white">
-                        <div class="row">
-                            <div class="card col s12 light-primary-color">
-                                <div class="card-content">
+                    <div class="col m10 s12 left-align">
+                        <h3 translate="landing.concept.analyze"
+                            class="hide-on-small-only primary-text-color"></h3>
+                        <h5 translate="landing.concept.analyze"
+                            class="hide-on-med-and-up primary-text-color"></h5>
+                        <h5 translate="pricing.offers.standard.statsMob.title"></h5>
+                        <h5><a href="javascript:void(0)" translate="commons.buttons.read-more"
+                               class="right accent-text-color"></a></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="collapsible-body white">
+                <div class="row">
+                    <div class="card col s12 light-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-bullseye fa-fw"></i>
                                                 <b translate="pricing.offers.standard.appWeb.title"></b>
                                             </span>
-                                    <p translate="pricing.offers.standard.appWeb.intro"></p>
-                                </div>
-                            </div>
+                            <p translate="pricing.offers.standard.appWeb.intro"></p>
+                        </div>
+                    </div>
 
 
-                            <div class="card col s12 dark-primary-color">
-                                <div class="card-content">
+                    <div class="card col s12 dark-primary-color">
+                        <div class="card-content">
                                             <span class="card-title">
                                                 <i class="fa fa-pie-chart fa-fw"></i>
                                                 <b translate="pricing.offers.standard.statsWeb.title"></b>
                                             </span>
 
-                                    <p translate="pricing.offers.standard.statsWeb.detail"></p>
-                                </div>
-                            </div>
+                            <p translate="pricing.offers.standard.statsWeb.detail"></p>
                         </div>
                     </div>
-                    <div class="laptop hide-on-med-and-down">
-                        <div class="upper white-text">
-                            <slide-wrapper arrows="false">
-                                <ul class="slide screenshot">
-                                    <li><img src="assets/images/handball/scshWeb08.png" materialboxed alt="screenshot"
-                                             class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb03.png" materialboxed alt="screenshot"
-                                             class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb04.png" materialboxed alt="screenshot"
-                                             class="materialboxed responsive-img"></li>
-                                    <li><img src="assets/images/handball/scshWeb06.png" materialboxed alt="screenshot"
-                                             class="materialboxed responsive-img"></li>
-                                </ul>
-                            </slide-wrapper>
-                        </div>
-                        <div class="lower"></div>
-                    </div>
-                </li>
-            </ul>
+                </div>
+            </div>
+        </li>
+    </ul>
+    <div class="container laptop hide-on-med-and-down">
+        <div class="upper white-text">
+            <slide-wrapper arrows="false">
+                <ul class="slide screenshot">
+                    <li><img src="assets/images/handball/scshWeb08.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshWeb03.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshWeb04.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshWeb06.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                </ul>
+            </slide-wrapper>
         </div>
+        <div class="lower"></div>
     </div>
-    <div class="row"><div class="col s12">&nbsp;</div></div>
 </div>
