--- a/src/app/modules/public/parts/06.html
+++ b/src/app/modules/public/parts/06.html
@@ -1,13 +1,13 @@
 <div class="home dark-primary-color">
-    <h3 translate="landing.area-6.title" class="center"></h3>
     <div class="container row">
-        <div class="col s12 m6">
+        <h4 translate="landing.area-6.title" class="center"></h4>
+        <div class="col m6 hide-on-small-only">
             <img src="assets/images/Livejournal.png" class="responsive-img left" alt="icone" style="max-width: 5rem; vertical-align: middle"/>
-            <p class="hide-on-small-only"><b translate="landing.area-6.content"></b></p>
+            <p><b translate="landing.area-6.content"></b></p>
         </div>
 
         <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
-              class="col m6"
+              class="col m6 s12"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
               novalidate>
             <div class="row">
