--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,6 +1,5 @@
 <div class="home container" id="collect">
-    <div class="row"><div class="col s12">&nbsp;</div></div>
-    <ul class="collapsible" data-collapsible="accordion" watch>
+    <ul class="collapsible popout" data-collapsible="accordion" watch>
         <li>
             <div class="collapsible-header light-primary-color">
                 <div class="row">
@@ -75,22 +74,22 @@
                     </div>
                 </div>
             </div>
-            <div class="outerdevice hide-on-small-only">
-                <div class="device">
-                    <slide-wrapper arrows="false">
-                        <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/scshApp01.png" materialboxed alt="screenshot"
-                                     class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp04.png" materialboxed alt="screenshot"
-                                     class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp05.png" materialboxed alt="screenshot"
-                                     class="materialboxed responsive-img"></li>
-                            <li><img src="assets/images/handball/scshApp07.png" materialboxed alt="screenshot"
-                                     class="materialboxed responsive-img"></li>
-                        </ul>
-                    </slide-wrapper>
-                </div>
-            </div>
         </li>
     </ul>
+    <div class="outerdevice hide-on-small-only">
+        <div class="device">
+            <slide-wrapper arrows="false">
+                <ul class="slide screenshot">
+                    <li><img src="assets/images/handball/scshApp01.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshApp04.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshApp05.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                    <li><img src="assets/images/handball/scshApp07.png" materialboxed alt="screenshot"
+                             class="materialboxed responsive-img"></li>
+                </ul>
+            </slide-wrapper>
+        </div>
+    </div>
 </div>
