QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -10,8 +10,9 @@
                 </div>
             </div>
             <div class="download-btn">
-                <a href="javascript:void(0)" class="btn waves-effect waves-light call-to-action"
-                   ng-click="gotoAnchor('download')"><i class="fa fa-fw fa-download"></i> {{'navbar.download' | translate}}</a>
+                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" rel="noopener"
+                   class="btn waves-effect waves-light call-to-action"><i class="fa fa-fw fa-download"></i>
+                    {{'navbar.download' | translate}}</a>
             </div>
             <div class="outter-arrow waves-effect waves-light">
                 <a href="javascript:void(0)" class="bounce fa fa-fw fa-3x fa-arrow-down"
