--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -17,28 +17,19 @@
                     </div>
                 </div>
             </div>
-            <div class="collapsible-body white">
+            <div class="collapsible-body default-primary-color">
                 <div class="row">
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-bullseye fa-fw"></i>
-                                                <b translate="pricing.offers.standard.appWeb.title"></b>
-                                            </span>
-                            <p translate="pricing.offers.standard.appWeb.intro"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-bullseye fa-fw"></i>
+                            <span translate="pricing.offers.standard.appWeb.title"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.appWeb.intro"></p>
                     </div>
-
-
-                    <div class="card col s12 dark-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-pie-chart fa-fw"></i>
-                                                <b translate="pricing.offers.standard.statsWeb.title"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.statsWeb.detail"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-pie-chart fa-fw"></i>
+                            <span translate="pricing.offers.standard.statsWeb.title"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.statsWeb.detail"></p>
                     </div>
                 </div>
             </div>
