--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -15,36 +15,25 @@
                     </div>
                 </div>
             </div>
-            <div class="collapsible-body white">
+            <div class="collapsible-body default-primary-color">
                 <div class="row">
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-share-alt fa-fw"></i>
-                                                <b translate="pricing.offers.standard.shareWeb.item1Title"></b>
-                                            </span>
-                            <p translate="pricing.offers.standard.shareWeb.item1Detail"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-share-alt fa-fw"></i>
+                            <span translate="pricing.offers.standard.shareWeb.item1Title"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.shareWeb.item1Detail"></p>
                     </div>
-
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-area-chart fa-fw"></i>
-                                                <b translate="pricing.offers.standard.teamWeb.title"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.teamWeb.detail"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-area-chart fa-fw"></i>
+                            <span translate="pricing.offers.standard.teamWeb.title"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.teamWeb.detail"></p>
                     </div>
-                    <div class="card col s12 dark-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-users fa-fw"></i>
-                                                <b translate="pricing.offers.standard.shareWeb.item2Title"></b>
-                                            </span>
-                            <p translate="pricing.offers.standard.shareWeb.item2Detail"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-users fa-fw"></i>
+                            <span translate="pricing.offers.standard.shareWeb.item2Title"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.shareWeb.item2Detail"></p>
                     </div>
                 </div>
             </div>
