--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -17,60 +17,42 @@
                     </div>
                 </div>
             </div>
-            <div class="collapsible-body white">
+            <div class="collapsible-body default-primary-color">
                 <div class="row">
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-bullseye fa-fw"></i>
-                                                <b translate="pricing.offers.standard.collectMob.detail.shootTitle"></b>
-                                            </span>
-                            <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-bullseye fa-fw"></i>
+                            <span translate="pricing.offers.standard.collectMob.detail.shootTitle"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.collectMob.detail.shoot"></p>
                     </div>
 
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-area-chart fa-fw"></i>
-                                                <b translate="pricing.offers.standard.collectMob.detail.attackTitle"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-area-chart fa-fw"></i>
+                            <span translate="pricing.offers.standard.collectMob.detail.attackTitle"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.collectMob.detail.attack"></p>
                     </div>
-
-                    <div class="card col s12 light-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-pie-chart fa-fw"></i>
-                                                <b translate="pricing.offers.standard.collectMob.detail.defenseTitle"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-pie-chart fa-fw"></i>
+                            <span translate="pricing.offers.standard.collectMob.detail.defenseTitle"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.collectMob.detail.defense"></p>
                     </div>
-
-                    <div class="card col s12 dark-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-bolt fa-fw"></i>
-                                                <b translate="pricing.offers.standard.collectMob.detail.disciplineTitle"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
-                        </div>
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-bolt fa-fw"></i>
+                            <span translate="pricing.offers.standard.collectMob.detail.disciplineTitle"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.collectMob.detail.discipline"></p>
                     </div>
-
-                    <div class="card col s12 dark-primary-color">
-                        <div class="card-content">
-                                            <span class="card-title">
-                                                <i class="fa fa-clock-o fa-fw"></i>
-                                                <b translate="pricing.offers.standard.collectMob.detail.statusTitle"></b>
-                                            </span>
-
-                            <p translate="pricing.offers.standard.collectMob.detail.status"></p>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <h5><i class="fa fa-clock-o fa-fw"></i>
+                            <span translate="pricing.offers.standard.collectMob.detail.statusTitle"></span>
+                        </h5>
+                        <p translate="pricing.offers.standard.collectMob.detail.status"></p>
                     </div>
                 </div>
             </div>
