--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1624,7 +1624,9 @@ slide-wrapper ul.bullets li.active {
 }
 
 .upper slide-wrapper ul.bullets {
-    margin-top: -30px;
+    margin-top: -40px;
+    z-index: 1000;
+    position: absolute;
 }
 
 .icon-block {
