QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/modules/public/parts/01.html
+++ b/src/app/modules/public/parts/01.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
             <div class="download-btn">
-                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" rel="noopener"
+                <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank" rel="noopener"
                    class="btn waves-effect waves-light call-to-action"><i class="fa fa-fw fa-download"></i>
                     {{'navbar.download' | translate}}</a>
             </div>
