--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -3,7 +3,7 @@
         <h4 class="center" translate="landing.area-4.title"></h4>
         <p class="center hide-on-small-only"><b translate="landing.area-4.content"></b></p>
         <div class="center stores">
-            <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color"
+            <a href="https://play.google.com/store/apps/details?id=com.qaobee.hand" target="_blank" class="light-text-color"
                rel="noopener">
                 <img src="assets/images/googleplay.png" class="responsive-img" style="width: 15rem;"
                      alt="play store logo"/></a>
