--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -65,6 +65,8 @@
                                     class="fa fa-twitter-square fa-fw fa-3x" aria-hidden="true"></i></a>
                             <a class="accent-text-color" href="https://github.com/Giwi" target="_blank"><i
                                     class="fa fa-github-square fa-fw fa-3x" aria-hidden="true"></i></a>
+                            <a class="accent-text-color" href="https://www.linkedin.com/in/xavmarin/" target="_blank"><i
+                                    class="fa fa-linkedin-square fa-fw fa-3x" aria-hidden="true"></i></a>
                         </p>
                     </div>
                 </div>
