--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,20 +1,20 @@
-<div class="default-primary-color aboutUs">
+<div class="aboutUs">
     <div class="container">
-        <h2 class="center-align" translate="landing.contact.about"></h2>
+        <h2 class="center-align dark-text-color" translate="about.title"></h2>
         <div class="row primary-text-color">
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Christophe.jpg" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Christophe<i
-                                class="material-icons right">more_vert</i></span>
-                        <h5>Le prépa. physique</h5>
-                        <p class="hide-on-small-only">Bon les gars, aujourd'hui on y vas cool...</p>
+                    <div class="card-content light-primary-color">
+                        <span class="card-title activator"><b>{{'about.christophe.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.christophe.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.christophe.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Christophe<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.christophe.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:christophe.kervella@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -25,17 +25,18 @@
                 </div>
             </div>
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Pascal.JPG" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Pascal<i class="material-icons right">more_vert</i></span>
-                        <h5>Le coach</h5>
-                        <p class="hide-on-small-only">Bon les gars, aujourd'hui on y vas cool...</p>
+                    <div class="card-content dark-primary-color">
+                         <span class="card-title activator"><b>{{'about.pascal.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.pascal.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.pascal.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Pascal<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.pascal.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:pascal.pelerin@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -47,17 +48,18 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Xavier.jpg" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Xavier<i class="material-icons right">more_vert</i></span>
-                        <h5>Le technicien</h5>
-                        <p class="hide-on-small-only">Il est à 100% au tir quand y'a pas de gardien...</p>
+                    <div class="card-content dark-primary-color">
+                        <span class="card-title activator"><b>{{'about.xavier.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.xavier.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.xavier.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Xavier<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.xavier.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:xavier.marin@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -73,17 +75,18 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/mathieu.jpg" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Mathieu<i class="material-icons right">more_vert</i></span>
-                        <h5>Le chargé de presse</h5>
-                        <p class="hide-on-small-only">Pas de commentaires, question suivante...</p>
+                    <div class="card-content dark-primary-color">
+                        <span class="card-title activator"><b>{{'about.mathieu.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.mathieu.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.mathieu.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Mathieu<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.mathieu.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:mathieu.garzuel@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -93,17 +96,18 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/florent.jpg" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Florent<i class="material-icons right">more_vert</i></span>
-                        <h5>Le tacticien</h5>
-                        <p class="hide-on-small-only">L'enclenchement A23 dans les 5 dernières minutes...</p>
+                    <div class="card-content dark-primary-color">
+                         <span class="card-title activator"><b>{{'about.florent.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.florent.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.florent.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Florent<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.florent.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:florent.isoard@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -113,17 +117,18 @@
 
             </div>
             <div class="col s12 m4">
-                <div class="card light-primary-color">
+                <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Jerome.JPG" alt="image">
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator">Jérôme<i class="material-icons right">more_vert</i></span>
-                        <h5>Le prépa. mental</h5>
-                        <p class="hide-on-small-only">Allez les gars, on leur marche sur la tête...</p>
+                    <div class="card-content dark-primary-color">
+                        <span class="card-title activator"><b>{{'about.jerome.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color">{{'about.jerome.role' | translate}}</h5>
+                        <br/><br/>
+                        <p class="hide-on-small-only">{{'about.jerome.desc' | translate}}</p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title">Jérôme<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.jerome.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:jerome.roue@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
