--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -7,13 +7,13 @@
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/Christophe.jpg" alt="image">
                     </div>
-                    <div class="card-content light-primary-color">
+                    <div class="card-content dark-primary-color">
                         <span class="card-title activator"><b>{{'about.christophe.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
                         <h5 class="accent-text-color">{{'about.christophe.role' | translate}}</h5>
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.christophe.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.christophe.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:christophe.kervella@qaobee.com" target="_blank"><i
@@ -35,7 +35,7 @@
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.pascal.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.pascal.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:pascal.pelerin@qaobee.com" target="_blank"><i
@@ -58,7 +58,7 @@
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.xavier.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.xavier.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:xavier.marin@qaobee.com" target="_blank"><i
@@ -85,7 +85,7 @@
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.mathieu.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.mathieu.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:mathieu.garzuel@qaobee.com" target="_blank"><i
@@ -106,7 +106,7 @@
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.florent.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.florent.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:florent.isoard@qaobee.com" target="_blank"><i
@@ -127,7 +127,7 @@
                         <br/><br/>
                         <p class="hide-on-small-only">{{'about.jerome.desc' | translate}}</p>
                     </div>
-                    <div class="card-reveal">
+                    <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.jerome.title' | translate}}<i class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:jerome.roue@qaobee.com" target="_blank"><i
