--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -8,13 +8,14 @@
                         <img class="activator responsive-img" src="assets/images/Christophe.jpg" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                        <span class="card-title activator"><b>{{'about.christophe.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.christophe.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.christophe.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.christophe.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.christophe.role"></h5>
+                        <p class="hide-on-small-only" translate="about.christophe.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
-                        <span class="card-title">{{'about.christophe.title' | translate}}<i class="material-icons right">close</i></span>
+                        <span class="card-title">{{'about.christophe.title' | translate}}<i
+                                class="material-icons right">close</i></span>
                         <p class="accent-text-color">
                             <a class="accent-text-color" href="mailto:christophe.kervella@qaobee.com" target="_blank"><i
                                     class="fa fa-envelope-square fa-fw fa-3x" aria-hidden="true"></i></a>
@@ -30,10 +31,10 @@
                         <img class="activator responsive-img" src="assets/images/Pascal.JPG" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                         <span class="card-title activator"><b>{{'about.pascal.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.pascal.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.pascal.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.pascal.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.pascal.role"></h5>
+                        <p class="hide-on-small-only" translate="about.pascal.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.pascal.title' | translate}}<i class="material-icons right">close</i></span>
@@ -45,7 +46,6 @@
                         </p>
                     </div>
                 </div>
-
             </div>
             <div class="col s12 m4">
                 <div class="card">
@@ -53,10 +53,10 @@
                         <img class="activator responsive-img" src="assets/images/Xavier.jpg" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                        <span class="card-title activator"><b>{{'about.xavier.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.xavier.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.xavier.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.xavier.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.xavier.role"></h5>
+                        <p class="hide-on-small-only" translate="about.xavier.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.xavier.title' | translate}}<i class="material-icons right">close</i></span>
@@ -80,10 +80,10 @@
                         <img class="activator responsive-img" src="assets/images/mathieu.jpg" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                        <span class="card-title activator"><b>{{'about.mathieu.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.mathieu.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.mathieu.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.mathieu.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.mathieu.role"></h5>
+                        <p class="hide-on-small-only" translate="about.mathieu.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.mathieu.title' | translate}}<i class="material-icons right">close</i></span>
@@ -101,10 +101,10 @@
                         <img class="activator responsive-img" src="assets/images/florent.jpg" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                         <span class="card-title activator"><b>{{'about.florent.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.florent.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.florent.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.florent.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.florent.role"></h5>
+                        <p class="hide-on-small-only" translate="about.florent.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.florent.title' | translate}}<i class="material-icons right">close</i></span>
@@ -114,7 +114,6 @@
                         </p>
                     </div>
                 </div>
-
             </div>
             <div class="col s12 m4">
                 <div class="card">
@@ -122,10 +121,10 @@
                         <img class="activator responsive-img" src="assets/images/Jerome.JPG" alt="image">
                     </div>
                     <div class="card-content dark-primary-color">
-                        <span class="card-title activator"><b>{{'about.jerome.title' | translate}}</b><i class="material-icons right">more_vert</i></span>
-                        <h5 class="accent-text-color">{{'about.jerome.role' | translate}}</h5>
-                        <br/><br/>
-                        <p class="hide-on-small-only">{{'about.jerome.desc' | translate}}</p>
+                        <span class="card-title activator"><b translate="about.jerome.title"></b><i
+                                class="material-icons right">more_vert</i></span>
+                        <h5 class="accent-text-color" translate="about.jerome.role"></h5>
+                        <p class="hide-on-small-only" translate="about.jerome.desc"></p>
                     </div>
                     <div class="card-reveal light-primary-color">
                         <span class="card-title">{{'about.jerome.title' | translate}}<i class="material-icons right">close</i></span>
